--- a/app/views/client/events/checkout.html.erb
+++ b/app/views/client/events/checkout.html.erb
@@ -119,7 +119,7 @@
           <div class="event card">
             <%= link_to client_event_path(event.to_url), target: '_self' do %>
               <% if event.event_pictures.present? %>
-                <div class="cover" style="background-image: url(<%= event.event_pictures.first.try(:media, :full) %>);"></div>
+                <div class="cover" style="background-image: url(<%= event.event_pictures.first.try(:media, :thumb) %>);"></div>
               <% else %>
                 <div class="cover"></div>
               <% end %>
