--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -156,15 +156,16 @@
               <div class="fb-page" data-href="https://www.facebook.com/daydashapp/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/daydashapp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/daydashapp/">Daydash</a></blockquote></div>
             </div>
             <div class="col col-xs-12 col-md-3">
-              <div class="list-panel">
+              <!-- <div class="list-panel">
                 <ul class="list-body list-inline">
                   <li><a href="/" target="_self"><img src="/src/images/theme/appstore.png" height="40" /></a></li>
                   <li><a href="/" target="_self"><img src="/src/images/theme/playstore.png" height="40" /></a></li>
                 </ul>
-              </div>
+              </div> -->
 
               <div>
-                <div class="copyright">© 2016 Daydash.co</div>
+                <div>© 2016 Daydash.co</div>
+                <!-- <div class="copyright">© 2016 Daydash.co</div> -->
                 <ul class="list-body list-inline">
                   <li>
                     <%= link_to "Terms & Conditions", terms_and_conditions_path, target: '_self' %>
@@ -175,8 +176,8 @@
                 </ul>
               </div>
 
-              <div class="cert-list">
-                <img src="/src/images/theme/comodo.png" height="30" />
+              <div class="cert-list" style="margin-top: 25px;">
+                <!-- <img src="/src/images/theme/comodo.png" height="30" /> -->
                 <img src="/src/images/theme/visa_master.png" height="30"/>
                 <img src="/src/images/theme/mixpanel.png" height="30"/>
               </div>
