--- a/app/views/layouts_mailer/user/ticket.html.erb
+++ b/app/views/layouts_mailer/user/ticket.html.erb
@@ -1,160 +1,2 @@
-<!-- Section 1 -->
-<tr class="section">
-  <td valign="top" id="templateBody">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
-      <tbody class="mcnTextBlockOuter">
-        <tr>
-          <td valign="top" class="mcnTextBlockInner" style="padding-top:9px;">
-            <!--[if mso]>
-            <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
-            <tr>
-            <![endif]-->
-
-            <!--[if mso]>
-            <td valign="top" width="600" style="width:600px;">
-            <![endif]-->
-            <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
-              <tbody>
-                <tr>
-                  <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                    <h1 style="background: black; color: white; padding: 5px; margin-bottom: 3px; display: inline-block;">
-                      Hi <%= "#{@user.first_name}" %>, here’s your tickets!
-                    </h1>
-                    <h1 style="padding: 0px 5px; padding-bottom: 30px;">
-                      It’s time to get excited! 😎
-                    </h1>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <!--[if mso]>
-            </td>
-            <![endif]-->
-
-            <!--[if mso]>
-            </tr>
-            </table>
-            <![endif]-->
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </td>
-</tr>
-
-<!-- Section 2 -->
-<tr class="section invoice">
-  <td valign="top" id="templateColumns">
-    <!--[if gte mso 9]>
-    <table align="center" border="0" cellspacing="0" cellpadding="0" width="600" style="width:600px;">
-    <tr>
-    <td align="center" valign="top" width="200" style="width:200px;">
-    <![endif]-->
-    <table align="left" border="0" cellpadding="0" cellspacing="0" width="200" class="columnWrapper">
-      <tr>
-        <td valign="top" class="columnContainer">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-            <tbody class="mcnCaptionBlockOuter">
-              <tr>
-                <td class="mcnCaptionBlockInner" valign="top" style="padding:9px;">
-                  <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionBottomContent" width="false">
-                    <tbody>
-                      <tr>
-                        <td class="mcnCaptionBottomImageContent" align="center" valign="top" style="padding:0 9px 9px 9px;" colspan="2">
-                          <table style="width: 164px;" class="mcpreview-image-uploader" data-mc-id="0"></table>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="mcnTextContent" valign="top" style="padding:0 9px 0 9px;">
-                          <strong>Give Me Soap เวิร์คช็อปทำสบู่ของขวัญ</strong><br>
-                          <p style="font-size: 14px; font-weight: 200;">
-                            Sunday 04 September, 02:54<br />
-                            ShopSpot HQ, BTS อารีย์
-                            [<a href="#">ดูแผนที่</a>]
-                          </p>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-    </table>
-    <!--[if gte mso 9]>
-    </td>
-    <td align="center" valign="top" width="400" style="width:400px;">
-    <![endif]-->
-    <table align="left" border="0" cellpadding="0" cellspacing="0" width="400" class="columnWrapper">
-      <tr>
-        <td valign="top" class="columnContainer">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-            <tbody class="mcnCaptionBlockOuter">
-              <tr>
-                <td class="mcnCaptionBlockInner" valign="top" style="padding:9px; background-image: url('/src/images/email/order/tile-pattern.png'); background-repeat: repeat;">
-                  <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionBottomContent" width="100%">
-                    <tbody>
-                      <tr>
-                        <td class="mcnCaptionBottomImageContent" align="center" valign="top" style="padding:0 9px 9px 9px;" colspan="2">
-                          <table style="width: 164px;" class="mcpreview-image-uploader" data-mc-id="0"></table>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="mcnTextContent" valign="top">
-                          <table class="invoice-info" width="100%">
-                            <tr>
-                              <td style="font-size: 14px; font-weight: 200;" >คำสั่งซื้อเลขที่ <a href="#">#12345</a></td>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">25 กันยายน 2016</td>
-                            </tr>
-                            <tr>
-                              <td colspan="3" style="padding: 10px 0px;">
-                                <table width="100%" style="border-bottom: 1px solid #eee;"><tr><td></td></tr></table>
-                              </td>
-                            </tr>
-                            <% @order.tickets.each do |ticket| %>
-                              <tr>
-                                <td style="font-size: 14px; font-weight: 200; padding-bottom: 5px;"><%= ticket.section.title %></td>
-                                <td style="font-size: 14px; font-weight: 200;" align="right">฿<%= ticket.to_price %> x 1</td>
-                                <td style="font-size: 14px; font-weight: 200;" align="right">฿<%= ticket.to_price %></td>
-                              </tr>
-                            <% end %>
-                            <tr>
-                              <td colspan="3" style="padding: 10px 0px;">
-                                <table width="100%" style="border-bottom: 1px solid #eee;"><tr><td></td></tr></table>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="3" align="right">Total ฿<%= @order.to_price %></td>
-                            </tr>
-                            <tr>
-                              <td colspan="3" style="padding: 10px 0px;">
-                                <table width="100%" style="border-bottom: 3px solid #eee;"><tr><td></td></tr></table>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="font-size: 14px; font-weight: 200;">ชำระเงินโดย: <%= @payment.channel %></td>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">สถานะ: <strong style="color: #17A41D;"><%= @payment.stages %></strong></td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-    </table>
-    <!--[if gte mso 9]>
-    </td>
-    </tr>
-    </table>
-    <![endif]-->
-  </td>
-</tr>
-
+<%= render partial: "layouts_mailer/parts/order" %>
 <%= render partial: "layouts_mailer/parts/ticket" %>
