--- a/app/views/layouts_mailer/parts/_order.html.erb
+++ b/app/views/layouts_mailer/parts/_order.html.erb
@@ -66,7 +66,7 @@
                       </tr>
                       <tr>
                         <td class="mcnTextContent" valign="top" style="padding:0 9px 0 9px;">
-                          <strong><%= @event.title %></strong><br>
+                          <p style="font-size: 18px;"><%= @event.title %></p>
                           <p style="font-size: 14px; font-weight: 200;">
                             Sunday 04 September, 02:54<br />
                             <%= @event.location_name %>
