--- a/app/views/layouts_mailer/parts/_ticket.html.erb
+++ b/app/views/layouts_mailer/parts/_ticket.html.erb
@@ -141,16 +141,16 @@
                       </tr>
                       <% end %>
                     </table>
-                    <p style="font-size: 24px; font-weight: 200; padding-top: 30px; padding-bottom: 15px; border-bottom: 1px solid black;">
-                      วิธีการใช้บัตร
-                    </p>
-                      <% if @order.event.instruction.present? %>
-                        <%= simple_format(auto_link(@order.event.instruction), style: 'font-weight: 200; padding-bottom: 30px;') %>
-                      <% else %>
-                        <p style="font-weight: 200; padding-bottom: 30px;">
-                          คุณสามารถใช้อีเมลนี้เพื่อเป็นบัตรเข้างานได้ทันที่ หรือแจ้งชื่อของคุณพร้อมแสดงบัตรประชาชน กับเจ้าหน้าที่หน้างาน เพื่อเข้างานได้ทันทีค่ะ :)
-                        </p>
-                      <% end %>
+                    <% if @order.event.instruction.present? %>
+                      <p style="font-size: 24px; font-weight: 200; padding-top: 30px; padding-bottom: 15px; border-bottom: 1px solid black;">
+                        วิธีการใช้บัตร
+                      </p>
+                      <%= simple_format(auto_link(@order.event.instruction), style: 'font-weight: 200; padding-bottom: 30px;') %>
+                    <% else %>
+                      <p style="font-weight: 200; padding-bottom: 30px;">
+                        คุณสามารถใช้อีเมลนี้เพื่อเป็นบัตรเข้างานได้ทันที่ หรือแจ้งชื่อของคุณพร้อมแสดงบัตรประชาชน กับเจ้าหน้าที่หน้างาน เพื่อเข้างานได้ทันทีค่ะ :)
+                      </p>
+                    <% end %>
                     <table width="100%">
                       <tr>
                         <td align="center" style="background: #DFFFFB; padding: 15px; font-size: 14px; font-weight: 200;">
@@ -159,6 +159,11 @@
                         </td>
                       </tr>
                     </table>
+
+                    <p style="font-weight: 200; padding-top: 15px;">
+                      หวังว่าคุณจะได้ลองทำสิ่งใหม่ๆ และได้พบประสบการณ์ดีๆ จากการใช้ Daydash 😁<br />
+                      — ทีมงาน Daydash.co
+                    </p>
 
                   </td>
                 </tr>
