--- a/app/views/layouts_mailer/parts/_order.html.erb
+++ b/app/views/layouts_mailer/parts/_order.html.erb
@@ -105,7 +105,7 @@
                         <td class="mcnTextContent" valign="top">
                           <table class="invoice-info" width="100%">
                             <tr>
-                              <td style="font-size: 14px; font-weight: 200;" >คำสั่งซื้อเลขที่ <a href='<%= "#{App.domain}/profile/#{@user.id}/tickets" %>'>#<%= @order.code %></a></td>
+                              <td style="font-size: 14px; font-weight: 200;" >คำสั่งซื้อเลขที่ <a href='<%= "#{App.domain}/profile/#{@user.id}/orders" %>'>#<%= @order.code %></a></td>
                               <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right"><%= @order.to_created_at %></td>
                             </tr>
                             <tr>
