--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -215,7 +215,7 @@ html, body
 a
   color: #00CFD1
   &:hover, &:active, &:link, &:visited
-    color: #00E9CA
+    color: #19D4D6
 
 h1
   font-weight: 300
