--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -129,11 +129,11 @@
                         <label class="radio">
                           <input type="radio" name="gender" value="female" <%= "checked" if current_user.gender == "female" %> required />
                           Female
-                        </label>
+                        </label><!--
                         <label class="radio">
                           <input type="radio" name="gender" value="not_specify" required />
                           Not specify
-                        </label>
+                        </label> -->
                       </div>
                     </div>
                     <div class="form-group col-xs-12 col-md-6" style="clear: left;">
