### https://trello.com/c/Drav8Wnc/171-format-my-order
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -61,7 +61,7 @@
                               <tr class="ticket">
                                 <td class="ticket-title" width="150"><%= ticket.section.title %></td>
                                 <td class="ticket-code"><%= ticket.code %></td>
-                                <td class="ticket-price" width="100" align="right"><%= ticket.to_price %></td>
+                                <td class="ticket-price" width="100" align="right"><%= convert_to_currency ticket.to_price %></td>
                               </tr>
                             <% end %>
                             <tr class="total">
