--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -242,8 +242,8 @@
 </div>
 
 <script src="https://cdn.omise.co/omise.js"></script>
-<script src="/src/packages/card/card.js"></script>
-<script src="/src/packages/card/jquery.card.js"></script>
+<%= javascript_include_tag 'card/card', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'card/jquery.card', 'data-turbolinks-track' => true %>
 
 <script type="text/javascript"> //Init Function
 
