--- a/app/views/greetings/campaign_terms.html.erb
+++ b/app/views/greetings/campaign_terms.html.erb
@@ -1,3 +1,5 @@
+  <%= stylesheet_link_tag 'greetings/dash-your-day', media: 'all', 'data-turbolinks-track' => true %>
+
   <section id="campaign-terms-page">
     <div id="fb-root"></div>
     <div id="wrapper">
