--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -134,7 +134,7 @@
                 <div class="list-title">Support</div>
                 <ul class="list-body nav">
                   <!-- <li><a href="/" target="_self">List Event on Daydash</a></li> -->
-                  <li><a href="https://blog.daydash.co/" target="_blank">Daydashzine</a></li>
+                  <li><a href="https://blog.daydash.co/" target="_blank">Daydash Blog</a></li>
                   <li><a href="/about" target="_self">Our Story</a></li>
                   <!-- <li><a href="/" target="_self">How to Pay</a></li> -->
                   <!-- <li><a href="/" target="_self">FAQ</a></li> -->
