### fix bug on production
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -74,7 +74,7 @@
               <h4 class="title text-left">
                 <%= link_to event.title, client_event_path(event.to_url), target: '_self' %>
               </h4>
-              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.first_section.to_event_human %></div>
+              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.uptime %></div>
               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= event.location_name %></div>
             </div>
           </div>
