--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -18,7 +18,7 @@
       <h1>ERROR 500</h1>
       <p>Something get wrong but it's ok because....</p>
       <h2>"A person who never made a mistake never tried anything new."</h2>
-      <a href="/" class="btn btn-daydash btn-daydash-green-2 btn-lg">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
+      <a href="/" target="_self" class="btn btn-daydash btn-daydash-green-2 btn-lg">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
     </div>
   </div>
 </div>
