--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -118,6 +118,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
+        <a href="#" class="pull-right" data-dismiss="modal" aria-label="Close" aria-hidden="true">Close</a>
+
         <table border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
           <tbody>
             <tr>
