--- a/app/assets/stylesheets/pages/profile.sass
+++ b/app/assets/stylesheets/pages/profile.sass
@@ -19,6 +19,10 @@ $green-color: #19D4D6
     width: 285px
     margin-top: 15px
 
+    li
+      width: 50%
+      margin-left: 0
+
   .current-user-panel
     text-align: center
     .profile-photo
@@ -33,6 +37,7 @@ $green-color: #19D4D6
       font-size: 20px
       font-weight: 200
       margin-bottom: 5px
+
 
 #profile-ticket-list-page
   #main
