--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -90,7 +90,7 @@
               <h1 class="form-title">2. Ticket Detail</h1>
             </div>
             <div class="form-body">
-              <div class="table-responsive">
+              <!-- <div class="table-responsive"> -->
                 <table class="table table-hover ticket-list">
                   <thead>
                     <tr>
@@ -139,7 +139,7 @@
                     <% end %>
                   </tbody>
                 </table>
-              </div>
+              <!-- </div> -->
             </div>
           </div>
           <div class="form-footer">
