--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -6,12 +6,14 @@
   <% end %>
   <div class="info">
     <div class="container">
-      <span style="background: #C04F8B;
-        color: #fff;
-        padding: 5px 10px;
-        font-weight: 600;
-        text-transform: uppercase;
-        letter-spacing: 0.04em;">Daydash Exclusive</span>
+      <% if @event.show_highlight %>
+        <span style="background: #C04F8B;
+          color: #fff;
+          padding: 5px 10px;
+          font-weight: 600;
+          text-transform: uppercase;
+          letter-spacing: 0.04em;">Daydash Exclusive</span>
+      <% end %>
       <h1 class="title"><%= @event.title %></h1>
     </div>
   </div>
