--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -102,41 +102,41 @@
         </div>
         <div class="table-responsive">
           <table class="table table-hover">
-            <% @event.sections.available.each do |section| %>
-            <!-- <input type="hidden" name="" value="<%= section.id %>"> -->
-            <tr>
-              <td>
-                <div class="ticket-name"><%= section.title %></div>
-                <div class="ticket-meta">
-                  <span class="ticket-time"><%= section.to_event_human %></span>
-                </div>
-              </td>
-              <% if section.ticket_availability? %>
-                <td width="150" align="right">
-                  <div class="ticket-meta" style="margin-top: 8px;">
-                    <span class="ticket-price"><%= convert_to_currency section.price %></span>
+            <% @sections.each do |section| %>
+              <!-- <input type="hidden" name="" value="<%= section.id %>"> -->
+              <tr>
+                <td>
+                  <div class="ticket-name"><%= section.title %></div>
+                  <div class="ticket-meta">
+                    <span class="ticket-time"><%= section.to_event_human %></span>
                   </div>
                 </td>
-                <td align="right" colspan="2">
-                  <select class="form-control" name="section[<%= section.id %>]">
-                    <% (0..section.show_ticket_available).each do |i| %>
-                      <option value="<%= i %>"><%= i %></option>
-                    <% end %>
-                  </select>
-                </td>
-              <% else %>
-                <td width="100" align="right">
-                  <div class="ticket-meta" style="margin-top: 8px; color: #ccc;">
-                    <span class="ticket-price"><%= convert_to_currency section.price %></span>
-                  </div>
-                </td>
-                <td align="right" colspan="2">
-                  <div class="ticket-meta" style="margin-top: 8px; margin-right: 5px; color: red;">
-                    <span class="ticket-not-available">SOLD OUT</span>
-                  </div>
-                </td>
-              <% end %>
-            </tr>
+                <% if section.ticket_availability? %>
+                  <td width="150" align="right">
+                    <div class="ticket-meta" style="margin-top: 8px;">
+                      <span class="ticket-price"><%= convert_to_currency section.price %></span>
+                    </div>
+                  </td>
+                  <td align="right" colspan="2">
+                    <select class="form-control" name="section[<%= section.id %>]">
+                      <% (0..section.show_ticket_available).each do |i| %>
+                        <option value="<%= i %>"><%= i %></option>
+                      <% end %>
+                    </select>
+                  </td>
+                <% else %>
+                  <td width="100" align="right">
+                    <div class="ticket-meta" style="margin-top: 8px; color: #ccc;">
+                      <span class="ticket-price"><%= convert_to_currency section.price %></span>
+                    </div>
+                  </td>
+                  <td align="right" colspan="2">
+                    <div class="ticket-meta" style="margin-top: 8px; margin-right: 5px; color: red;">
+                      <span class="ticket-not-available">SOLD OUT</span>
+                    </div>
+                  </td>
+                <% end %>
+              </tr>
             <% end %>
           </table>
         </div>
