--- a/app/assets/stylesheets/pages/profile.sass
+++ b/app/assets/stylesheets/pages/profile.sass
@@ -16,10 +16,12 @@ $green-color: #19D4D6
   #profile-nav, #organizer-nav
     text-align: center
     margin: 0px auto
-    width: 285px
+    width: 295px
     margin-top: 15px
+    display: flex
 
     li
+      flex: 1
       margin-left: 0
 
   .current-user-panel
