--- a/app/views/organizer/parts/_organizer-event-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-event-nav.html.erb
@@ -10,9 +10,12 @@
   </li>
   <li>
     <% if @event.status.published? %>
-      <a href="<%= unpublish_organizer_event_path(@event) %>"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
+      <a href="<%= unpublish_organizer_event_path(@event) %>" target="_self"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
     <% else %>
-      <a href="<%= published_organizer_event_path(@event) %>"><i class="icon icon-xs icon-checked"></i> Published</a>
+      <a href="<%= published_organizer_event_path(@event) %>" target="_self"><i class="icon icon-xs icon-checked"></i> Published</a>
     <% end %>
+  </li>
+  <li>
+    <a href="<%= update_time_event_organizer_event_path(@event) %>" target="_self"><i class="fa fa-wrench" aria-hidden="true"></i> Force update events</a>
   </li>
 </ul>
