--- a/app/views/layouts/parts/_section.html.erb
+++ b/app/views/layouts/parts/_section.html.erb
@@ -38,6 +38,7 @@
     <td><input class="form-control" type="text" name="new_ticket_names[]" value="" placeholder="eg. General, VIP" /></td>
     <td><input class="form-control" type="number" name="new_ticket_totals[]" value="" /></td>
     <td><input class="form-control" type="number" name="new_ticket_prices[]" value="" /></td>
+    <td><input class="form-control" type="number" name="new_ticket_units[]" value="" /></td>
 
     <td width="200">
       <div class="form-group">
