--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -33,10 +33,10 @@
                 <div class="form-group">
                   <label>Show Highlight</label>
                   <div class="radio">
-                    <label><input type="radio" name="show_highlight" value="true" <%= "checked" if @event.show_highlight %>>show</label>
+                    <label><input type="radio" name="show_highlight" value="true" <%= "checked" if @event.show_highlight %>>Show</label>
                   </div>
                   <div class="radio">
-                    <label><input type="radio" name="show_highlight" value="false" <%= "checked" unless @event.show_highlight %>>hide</label>
+                    <label><input type="radio" name="show_highlight" value="false" <%= "checked" unless @event.show_highlight %>>Hide</label>
                   </div>
                 </div>
                 <div class="form-group">
@@ -106,6 +106,22 @@
             <div class="form-header">
               <h1 class="form-title">2. Ticket Detail</h1>
             </div>
+
+            <div class="form-body row">
+              <div class="col-xs-12 col-md-6">
+                <div class="form-group">
+                  <label>Share total of tickets</label>
+                    <label><input type="radio" name="share_ticket" value="true" <%= "checked" if @event.share_ticket %>> Yes</label>
+                    <label><input type="radio" name="share_ticket" value="false" <%= "checked" unless @event.share_ticket %>> No</label>
+                 </div>
+<!--
+                <div class="form-group">
+                  <label>Total tickets of this event</label>
+                  <input class="form-control" type="number" name="total_of_ticket" value="<%= @event.total_of_ticket %>" />
+                </div> -->
+              </div>
+            </div>
+
             <div class="form-body">
               <!-- <div class="table-responsive"> -->
                 <table class="table table-hover ticket-list">
@@ -114,6 +130,7 @@
                       <td>Ticket Title</td>
                       <td>Ticket Available</td>
                       <td>Ticket Price</td>
+                      <td>Ticket Unit</td>
                       <td>From</td>
                       <td>To</td>
                       <td><!-- Action --></td>
@@ -126,6 +143,7 @@
                           <td><input class="form-control" type="text" name="tickets[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
                           <td><input class="form-control" type="number" name="tickets[<%= section.id %>][total]" value="<%= section.total %>" /></td>
                           <td><input class="form-control" type="number" name="tickets[<%= section.id %>][price]" value="<%= section.price %>" /></td>
+                          <td><input class="form-control" type="number" name="tickets[<%= section.id %>][unit]" value="<%= section.unit %>" /></td>
 
                           <td width="200">
                             <div class="form-group">
@@ -166,3 +184,16 @@
             or
             <button class="btn btn-default" value="unpublish">Save as Draft</button> -->
           </div>
+
+<!--           <script type="text/javascript">
+            $(document).ready(function(){
+              $('input[name="share_ticket"]')[0].on('checked', function(){
+                $('input[name="total_of_ticket"]').show()
+              })
+
+              $('input[name="share_ticket"]')[1].on('checked', function(){
+                $('input[name="total_of_ticket"]').hide()
+              })
+
+            });
+          </script> -->
