--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -3,8 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Daydash</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 "/>
+    <meta name="description" content="<%= @description %>" />
+
+    <meta property="fb:app_id" content="<%= App.configure.facebook_app_id %>" />
+    <meta property="og:title" content="<%= @title %>"/>
+    <meta property="og:type" content="event"/>
+    <meta property="og:description" content="<%= @description %>"/>
+    <meta property="og:image" content="<% @image %>" />
+    <meta property="og:site_name" content="daydash.co"/>
+    <meta property="og:latitude" content="<% @event.try(:latitute) %>"/>
+    <meta property="og:longitude" content="<% @event.try(:latitute) %>"/>
+    <meta property="og:email" content="<% @event.try(:latitute) %>"/>
+    <meta property="og:phone-number" content="<% @event.try(:latitute) %>"/>
+    <meta property="og:street-address" content="<% @event.try(:address_name) %>"/>
+    <meta property="og:location" content="<% @event.try(:address_location) %>" />
+    <meta property="og:start_time" content="<% @event.try(:uptime) %>" />
+    <meta property="og:end_time" content="<% @event.try(:uptime) %>" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@daydashapp" />
+    <meta name="twitter:title" content="จิบกาแฟคนทำเว็บ หัวข้อ &quot;EPayment&quot; และ งานประชุมใหญ่สามัญประจำปี 2559" />
+    <meta name="twitter:image" content="<% @image %>" />
+
     <meta name= "category-id" content="<%= @category_id %>">
+
     <%= csrf_meta_tags %>
     <%= render partial: "layouts/parts/tracking" %>
 
