--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -40,7 +40,7 @@
                             </tr>
                             <tr>
                               <td>วิธีการชำระเงิน</td>
-                              <td><%= order.payment.try(:channel) %></td>
+                              <td><%= order.payment.channel %></td>
                             </tr>
                             <tr>
                               <td>สถานะการชำระเงิน</td>
